--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,14 @@
 			var num = document.getElementById("n1");
 			num.value = Math.pow(num.value, 3); }
 
+			function seno() {
+			var num = document.getElementById("n1");
+			num.value = Math.sin(num.value); }
+
+
+
+
+
 		</script> </head> <body>
 
 			<h1>Calculadora de Álvaro Cuadrado Rodríguez</h1>
@@ -17,6 +25,7 @@ Number:
 
 <input type="text" id="n1"><p>
 
-	<button onclick="cube()"> x^3 </button> </body>
+	<button onclick="cube()"> x^3 </button> 
+	<button onclick="seno()"> sin(x) </button> </body>
 
 </html>
